# goldendict-ng

./: 404.html  CMakeLists.txt  dictionary.hh  index.html  mediawiki.cc  scanpopup.cc  scanpopup.hh  website.cc  website.hh
.github/workflows/: windows-6.x-xapian.yml  windows.yml
developer/: index.html
dictformats/: index.html
feedbacks/: index.html
index_cn/: index.html
install/: index.html
managedicts/: index.html
search/: search_index.json
src/: article_maker.cc  btreeidx.cc  country.cc  ftshelpers.cc  ftshelpers.hh  headwordsmodel.cc  language.cc
src/common/: wstring_qt.cc  wstring_qt.hh
src/dict/: forvo.cc  mdx.cc
src/ui/: articleview.cpp  articleview.h
topic_anki/: index.html
topic_commandline/: index.html
topic_portablemode/: index.html
topic_userstyle/: index.html
ui_favorites/: index.html
ui_fulltextsearch/: index.html
ui_headwords/: index.html
ui_popup/: index.html
ui_shortcuts/: index.html
ui_toolbar/: index.html
